Make changes for vs 1.1.7
add to use modular libs for Java
add possiblity to run a Java program as module
revise docu