@@ -34,14 +34,22 @@ public class Compilation {
    private final JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
    private final FilesFinder fFind = new FilesFinder();
    private final ConsolePrinter pr;
+   private final Libraries libs;
+   private final LibModules mods;
 
    private boolean success = false;
 
    /**
-    * @param printer  the reference <code>ConsolePrinter</code>
+    * @param printer  the <code>ConsolePrinter</code>
+    * @param libs  the <code>Libraries</code> that may contain external
+    * libraries that are added to the classpath
+    * @param mods  the <code>LibModules</code> that may contain external
+    * library modules that are added to the module path
     */
-   public Compilation(ConsolePrinter printer) {
+   public Compilation(ConsolePrinter printer, Libraries libs, LibModules mods) {
       pr = printer;
+      this.libs = libs;
+      this.mods = mods;
    }
 
    /**
@@ -54,17 +62,11 @@ public class Compilation {
     * @param nonJavaExt  the array of extensions of files that are copied
     * to the compilation if classDir and sourceDir differ. May be the
     * zero length array.
-    * @param libs  the libraries in which individual paths are separated
-    * by the system's path separator. May be the empty string
     * @param options  Compiler options, in which several options and
     * arguments are separated by spaces.
     */
-   public void compile(
-            String classDir,
-            String sourceDir,
-            String[] nonJavaExt,
-            String libs,
-            String options) {
+   public void compile(String classDir, String sourceDir, String[] nonJavaExt,
+         String options) {
 
       if (compiler == null) {
          Dialogs.errorMessage("The compiler was not found.", null);
@@ -76,20 +78,14 @@ public class Compilation {
 
       StandardJavaFileManager fileManager
             = compiler.getStandardFileManager(null, null, null);
-      //
-      // Java files
+
       List<File> sources = fFind.filteredFiles(sourceDir, ".java", classDir, "");
       File[] fileArr = sources.toArray(new File[sources.size()]);
       Iterable<? extends JavaFileObject>units
             = fileManager.getJavaFileObjects(fileArr);
-      //
-      // Compiler options
-      Iterable<String> compileOptions
-            = compileOptions(classDir, sourceDir, libs, options);
 
+      Iterable<String> compileOptions = compileOptions(classDir, options);
       StringWriter writer = new StringWriter();
-      //
-      // compile, print messages
       try {
          CompilationTask task = compiler.getTask(
                writer,
@@ -100,19 +96,22 @@ public class Compilation {
                units);
 
          success = task.call();
-         if (nonJavaExt.length > 0) {
+         if (success && nonJavaExt.length > 0 && !classDir.equals(sourceDir)) {
             copyFiles(sourceDir, classDir, nonJavaExt);
          }
          pr.printLine(writer.toString());
          printDiagnostics(diagnostics);
       }
-      catch (IllegalStateException e) {
-         FileUtils.log(e);
-      }
-      catch (RuntimeException e) {
+      catch (IllegalArgumentException | IllegalStateException e) {
          //
-         // not checked before if compile option arguments are valid
-         pr.printLine(e.getMessage());
+         // A compiler option or its argument may be wrong
+         String msg = e.getMessage() != null
+               ? "for the following reason:\n" + e.getMessage() : "";
+
+         pr.printLine(">>Unable to compile " + msg);
+      }
+      catch (IOException | RuntimeException e) {
+         FileUtils.log(e);
       }
       finally {
          try {
@@ -127,109 +126,80 @@ public class Compilation {
    //--private--/
    //
 
-   private Iterable<String> compileOptions(String classDir, String sourceDir,
-         String libs, String options) {
-
+   private Iterable<String> compileOptions(String classDir, String options) {
       List <String> optList = new ArrayList<>();
       optList.add("-d");
       optList.add(classDir);
-      if (!sourceDir.isEmpty()) {
-         optList.add("-sourcepath");
-         optList.add(sourceDir);
-      }
-      if (!libs.isEmpty()) {
-         optList.add("-cp");
-         optList.add(libs);
-      }
-      if (!options.isEmpty()) {
-         String[] test = options.split("\\s+");
-         boolean ok = true;
-         String msg = "";
-         for (int i = 0; i < test.length; i++) {
-            int args;
-            if (test[i].startsWith("-")) {
-               args = compiler.isSupportedOption(test[i]);
-               ok = -1 < args;
-               if (!ok) {
-                  msg = test[i] + " is not a valid compiler option.";
-                  break;
-               }
-               if (args == 0) {
-                  ok = i == test.length - 1
-                        || (i < test.length - 1 && test[i + 1].startsWith("-"));
-
-                  if (!ok) {
-                     msg = test[i] + "  does not take arguments.";
-                     break;
-                  }
-               }
-               if (args > 0) {
-                  ok = i < test.length - 1 && !test[i + 1].startsWith("-");
-                  if (!ok) {
-                     msg = test[i] + " requires an argument.";
-                     break;
-                  }
-               }
-            }
-            else {
-               ok = i > 0 && test[i - 1].startsWith("-");
-               if (!ok) {
-                  msg = test[i] + " is not a valid compiler option.";
-                  break;
-               }
-            }
-            if (ok) {
-               optList.add(test[i]);
-            }
-         }
-         if (!ok) {
-            String err = "NOTE: " + msg;
-            pr.printBr(err);
-         }
-      }
+      addDepsOptions(optList);
+      addOptionsInput(optList, options);
       return optList;
    }
 
-   private void copyFiles(String sourceDir, String classDir,
-         String[] nonJavaExt) {
+   private void addDepsOptions(List <String> optList) {
+      if (!libs.joinedAbs().isEmpty()) {
+         optList.add("-cp");
+         optList.add(libs.joinedAbs());
+      }
+      if (!mods.joinedParentsAbs().isEmpty()) {
+         optList.add("-p");
+         optList.add(mods.joinedParentsAbs());
+         optList.add("--add-modules");
+         optList.add(mods.joinedNames());
+      }
+   }
 
-      if (classDir.equals(sourceDir)) {
+   private void addOptionsInput(List <String> optList, String options) {
+      if (options.isEmpty()) {
          return;
       }
+      String[] test = options.split("\\s+");
+      int iErr = -1;
+      for (int i = 0; i < test.length; i++) {
+         if (test[i].startsWith("-") && -1 == compiler.isSupportedOption(test[i])) {
+            pr.printBr("NOTE: " + test[i] + " is invalid or cannot be used");
+         }
+         optList.add(test[i]);
+      }
+      if (iErr > - 1) {
+         //pr.printBr("NOTE: " + test[iErr] + " is invalid or cannot be used");
+      }
+   }
+
+   private void copyFiles(String sourceDir, String classDir, String[] nonJavaExt)
+         throws IOException {
 
       for (String ext : nonJavaExt) {
          List<File> toCopy = fFind.filteredFiles(sourceDir, ext, classDir, "");
          if (toCopy.isEmpty()) {
-            String copyFilesErr =
-                  "NOTE: Files with extension \""
-                  + ext
-                  + "\" for copying to the compilation were not found";
-
-            pr.printBr(copyFilesErr);
+            printNoFileToCopyMsg(ext);
          }
          else {
-            try {
-               for (File f : toCopy) {
-                  String source = f.getPath().replace("\\", "/");
-                  String destination = source.replace(
-                        sourceDir.replace("\\", "/"), classDir.replace("\\", "/"));
+            for (File f : toCopy) {
+               String source = f.getPath().replace("\\", "/");
+               String destination = source.replace(
+                     sourceDir.replace("\\", "/"), classDir.replace("\\", "/"));
 
-                  File fDest = new File(destination);
-                  if (fDest.isAbsolute()) {
-                     File destDir = fDest.getParentFile();
-                     if (!destDir.exists()) {
-                        destDir.mkdirs();
-                     }
-                     Files.copy(f.toPath(), fDest.toPath(),
-                           StandardCopyOption.REPLACE_EXISTING);
-                     }
+               File fDest = new File(destination);
+               if (fDest.isAbsolute()) {
+                  File destDir = fDest.getParentFile();
+                  if (!destDir.exists()) {
+                     destDir.mkdirs();
+                  }
+                  Files.copy(f.toPath(), fDest.toPath(),
+                        StandardCopyOption.REPLACE_EXISTING);
                }
-            }
-            catch (IOException e) {
-               FileUtils.log(e);
             }
          }
       }
+   }
+
+   private void printNoFileToCopyMsg(String ext) {
+      String s =
+            "NOTE: Files with extension \'"
+            + ext
+            + "\' for copying to the compilation cannot be found";
+
+      pr.printBr(s);
    }
 
    private void printDiagnostics(DiagnosticCollector<JavaFileObject> diagnostics) {
